# LESI_VC_2324_2

./: CMakeLists.txt  main.cpp
data/: CodigoExemplo.cpp
include/: image_processing.h  resistor_detection.h  utility.h  vc.c  vc.h  video_processor.h
src/: image_processing.cpp  main.cpp  resistor_detection.cpp  utility.cpp  vc.c  video_processor.cpp
